30-tools/pg-web/prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pg-web
    app.kubernetes.io/instance: pg-web
