30-tools/pg-web/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pg-web-ingress
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    ingressClassName: nginx
    rules:
        - host: pg-web.check-consulting.net
          http:
              paths:
                  - pathType: Prefix
                    path: /
                    backend:
                        service:
                            name: pg-web
                            port:
                                number: 80
    tls:
        - hosts:
              - pg-web.check-consulting.net
          secretName: pg-web.check-consulting.net.tls
